--- a/Exercises/Ex2/includes/style.css
+++ b/Exercises/Ex2/includes/style.css
@@ -156,7 +156,7 @@ nav a:active{
     list-style-type: none;
 }
 
-.skills-section ul li{
+.skills-section li{
     align-items: center;
     margin-bottom: 30px;
 
@@ -166,14 +166,14 @@ nav a:active{
     width: 54px;
 }
 
-.skills-section ul li i{
+.skills-section i{
     position: relative;
     font-size: 30px; /* size calculated relative to location in circle */
     left: 12px;
     top:12px;
 }
 
-.skills-section ul li span{
+.skills-section span{
     font-weight: 500;
     font-size: 20px; /* had to make it bigger because lato font is naturally smaller */
     line-height: 24px;
@@ -228,7 +228,6 @@ footer{
 .border{
     height: 1px;
     mix-blend-mode: normal;
-    width: 1110px;
     opacity: 0.2;
     border: 1px solid #FFFFFF;
     box-sizing: border-box;
