--- a/Exercises/Ex3/includes/style.css
+++ b/Exercises/Ex3/includes/style.css
@@ -436,3 +436,17 @@ nav span{
       width: 100%;
   }
 }
+
+
+@media (max-width:1440px){
+  #layout3 main{
+    width: 964px;
+  }
+}
+
+
+@media (max-width:2000px){
+  #layout3 main{
+    width: 1427px;
+  }
+}
