--- a/Exercises/Ex3/includes/style.css
+++ b/Exercises/Ex3/includes/style.css
@@ -332,6 +332,11 @@ nav span{
 
 #layout2 aside a{
   color: #000000;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 96px;
+  line-height: normal;
+  text-align: center;
 }
 
 #layout2 footer{
@@ -412,6 +417,30 @@ nav span{
 /*Mobile Querries*/
 /*-----------------------------*/
 
+@media (max-width:2560px){
+  #layout3 main{
+    width: 2000px;
+  }
+}
+
+
+@media (max-width:1920px){
+  #layout3 main{
+    width: 1427px;
+  }
+}
+
+
+@media (max-width:1441px){
+
+  #layout3 main{
+    width: 964px;
+    height: 995px;
+    overflow: scroll;
+  }
+}
+
+
 @media (max-width:767px){
     
   #layout3 .main-nav{
@@ -437,16 +466,3 @@ nav span{
   }
 }
 
-
-@media (max-width:1440px){
-  #layout3 main{
-    width: 964px;
-  }
-}
-
-
-@media (max-width:2000px){
-  #layout3 main{
-    width: 1427px;
-  }
-}
