--- a/Exercises/Ex3/includes/style.css
+++ b/Exercises/Ex3/includes/style.css
@@ -421,7 +421,9 @@ nav span {
 @media (max-width: 768px) {
   #layout3 .main{
     display: block;
+    overflow: hidden;
   }
+  
   #layout3 .main-nav {
     height: 105px;
     width: 100%;
@@ -435,7 +437,7 @@ nav span {
   #layout3 aside {
     display: none;
   }
-  
+
   #layout3 main {
     width: 100%;
     min-height: 100vh;
