--- a/Exercises/Project/include/necessary.css
+++ b/Exercises/Project/include/necessary.css
@@ -23,6 +23,7 @@ a{
 body{
     font-family: 'Lato', sans-serif;
     font-style: normal;
+    text-rendering: optimizeLegibility;
 }
 
 header,
@@ -38,7 +39,6 @@ footer{
     height: 100px;
     width: auto;
     float: left;
-    margin-top: 30px;
 }
 
 .blacklogo {
@@ -46,7 +46,6 @@ footer{
     height: 50px;
     width: auto;
     float: left;
-    margin-top: 10px;
 }
 
 .main-nav {
@@ -77,17 +76,8 @@ footer{
     border-bottom: 2px solid #fc86d3;
 }
 
-.nav{
-
-}
-
-.sticky {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
+.navbar{
     background: #fed9f1;
-    z-index: 999;
 }
 
 .sticky .main-nav {
@@ -107,8 +97,14 @@ footer{
 footer {
     background-color: #272727;
     color: #686868;
+    bottom: 0px;
 }
 
 main{
     margin-top:50px;
+}
+
+.loginForm{
+    margin-top: 15vh;
+    height: 80vh;
 }
