--- a/KittyHaven/include/landing.css
+++ b/KittyHaven/include/landing.css
@@ -227,3 +227,27 @@ footer {
         padding-right: 4.6vw;
     }
 }
+
+/*-----------------------------*/
+/*scrollbar*/
+/*-----------------------------*/
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #fed9f1; 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #fc86d3; 
+  }
