--- a/KittyHaven/include/main.css
+++ b/KittyHaven/include/main.css
@@ -117,3 +117,68 @@ main{
     margin-top:50px;
 }
 
+footer p{
+    margin: 0;
+    padding: 10px;
+}
+
+/*-----------------------------*/
+/*scrollbar*/
+/*-----------------------------*/
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #c1c1c1  ; 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #fc86d3; 
+  }
+
+/*-----------------------------*/
+/*repeatable*/
+/*-----------------------------*/
+
+.loginForm{
+    margin-top: 15vh;
+    height: 80vh;
+}
+
+.form-signin input{
+    margin-bottom:10px;
+}
+
+.form-signin input:active{
+    border-color: #FDA7DF;
+}
+
+.btn-primary{
+    transition: background-color 0.2s, border 0.2s, color 0.2s; 
+    background-color: #FDA7DF;
+    border: 1px solid #FDA7DF;
+}
+
+.btn-primary:hover{
+    background-color: #fc86d3;
+    border: 1px solid #fc86d3;
+}
+
+input:focus,
+textarea:focus{   
+    border-color: #FDA7DF !important;
+    box-shadow: 0 1px 1px #00000013 inset, 0 0 8px #FDA7DF !important;
+    outline: 0 none !important;
+}
+
+
