--- a/KittyHaven/include/user.css
+++ b/KittyHaven/include/user.css
@@ -4,7 +4,7 @@
 }
 
 .borderLine{
-    width: 40vw;
+    width: 600px;
     margin: 5vh auto;
     height: 2px;
     background: #fc86d3;
@@ -48,6 +48,7 @@ footer{
 
 #data{
     min-height: 40vh;
+    margin-bottom: 10vh;
 }
 
 .list-group-item{
@@ -61,10 +62,78 @@ footer{
     border: none;
 }
 
-@media (max-width:425px){
+/*-----------------------------*/
+/*form range slider*/
+/*-----------------------------*/
+  
+.slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 15px;
+    border-radius: 5px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+  
+.slider:hover {
+    opacity: 1;
+}
+  
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #FDA7DF;
+    cursor: pointer;
+}
+  
+.slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #FDA7DF;
+    cursor: pointer;
+}
+
+.sliderRight{
+    float: right;
+}
+
+.text{
+    margin-bottom: 30px;
+}
+
+.updateForm .col-md-6,
+.updateForm .col-md-6 .col{
+    padding-left: 0px;
+}
+
+.ui-state-active{
+    background: #fc86d3;
+    border: 1px solid #fc86d3;
+}
+
+.ui-accordion-header {outline: none;}
+
+.ui-accordion .ui-accordion-header{
+margin: 10px 0  0 0 !important;
+}
+
+
+
+/*-----------------------------*/
+/*Querries*/
+/*-----------------------------*/
+
+@media (max-width:768px){
     .navList{
         margin: 5vh auto;
-        width:100%;
+        width: 100%;
         height: 2px;
     }
     .borderLine{
