--- a/KittyHaven/include/landing.css
+++ b/KittyHaven/include/landing.css
@@ -90,7 +90,7 @@ h2:after {
 /*--------------------------------------*/
 
 header {
-    background-image: linear-gradient(#8383836b,#00000069), url(../images/backgroundplus.png);
+    background-image: linear-gradient(#8383836b,#00000069), url(https://i.imgur.com/WJvcLMF.png);
     background-size: cover;
     background-position: center;
     height: 100vh;
